# Allergy_Check_OCR

./: README.md  exercise.py  pyproject.toml
