[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["kongms002 <ms020221@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
